@@ -141,9 +141,6 @@ is the one before that, etc.
 An index of 0 may be used for the vertex texture or normal to
 indicate none, or these may be left off entirely.
 All faces will be broken into triangles in the final mesh.
-.I Obj2mesh
-currently makes an unsafe assumption that faces are convex,
-which may result in odd results if they are not.
 .PP
 All other statement types will be ignored on the input.
 Statements understood by
